# maxx-wp-automator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
